[#749] Code refactored.